--- a/rpm/spec.in
+++ b/rpm/spec.in
@@ -25,8 +25,8 @@ Version:   %{version}
 Release:   %{release}%{?dist}
 Summary:   @SUMMARY@
 # The entire @PACKAGE@ source code is AGPLv3 except:
-# Plupload GPLv2, ezSQL LGPL, CodeMirror zlib, ParsePHP BSD, jQuery MIT GPLv2, Sizzle MIT BSD GPL
-License:   @LICENSE@ and GPLv2 and LGPLv2+ and zlib and BSD and (MIT or GPLv2) and (MIT or BSD or GPLv2+)
+# Plupload GPLv2, ezSQL LGPL, BrowserPlus MPLv1.1, CodeMirror zlib, ParsePHP BSD, jQuery MIT GPLv2, Sizzle MIT BSD GPL, Sarissa ASL 2.0 GPLv2+ LGPLv2+
+License:   @LICENSE@ and GPLv2 and LGPLv2+ and MPLv1.1 and zlib and BSD and (MIT or GPLv2) and (MIT or BSD or GPLv2+) and (ASL 2.0 or GPLv2+ or LGPLv2+)
 Group:     @GROUP@
 URL:       %{url}
 Source0:   %{url}/files/pkgs/%{version}/%{pkgdist}
@@ -131,9 +131,9 @@ DB_SUPER_USER_PASS=@DB_SUPER_USER_PASS@ \
 %doc ChangeLog README README.fedora LICENSE AUTHORS INSTALL VERSION PACKAGE-LICENSING
 # LGPLv2+
 %{_datadir}/%{name}/system/database/
-# (MIT or GPLv2) and (MIT or BSD or GPL)
+# (MIT or GPLv2) and (MIT or BSD or GPLv2+) and (ASL 2.0 or GPLv2+ or LGPLv2+)
 %{_datadir}/%{name}/assets/javascript/jquery/
-# GPLv2
+# GPLv2 and BSD and MPLv1.1
 %{_datadir}/%{name}/assets/javascript/plupload/
 # BSD and zlib
 %{_datadir}/%{name}/assets/javascript/codemirror/
@@ -169,6 +169,10 @@ DB_SUPER_USER_PASS=@DB_SUPER_USER_PASS@ \
 # Changes made to the package
 #============================
 %changelog
+
+* Sun Nov 14 2010 Steven Garcia <webwhammy@gmail.com> 0.6.6-1
+- Upstream released 0.6.6
+- Made changes to the license field
 
 * Sat Nov 13 2010 Steven Garcia <webwhammy@gmail.com> 0.6.5-1
 - Upstream released 0.6.5
