fixing makefile portability

--- a/src/assets/javascript/jquery/plugins/jstree/themes/default/Makefile.am
+++ b/src/assets/javascript/jquery/plugins/jstree/themes/default/Makefile.am
@@ -19,11 +19,11 @@
 
 # Find the source files of only the current source directory non-recursively
 aiki_src_files = \
-	$(shell find $(srcdir) -maxdepth 1 -name \*\.css -o -name \*\.png -o -name \*\.gif)
+	$(shell find ${srcdir} -maxdepth 1 -name \*\.css -o -name \*\.png -o -name \*\.gif)
 
 # Find the sub directories of only the current build directory non-recursively
 export aiki_sub_dirs = \
-	$(shell find -maxdepth 1 -type d | $(SED) s/\.\\/*//)
+	$(shell find -maxdepth 1 -type d | sed s/\.\\/*//)
 
 # Subdirectories to distribute and build
 DIST_SUBDIRS = $(aiki_sub_dirs)
