--- a/src/assets/javascript/jquery/css/smoothness/images/Makefile.am
+++ b/src/assets/javascript/jquery/css/smoothness/images/Makefile.am
@@ -17,17 +17,27 @@
 
 # Written by Steven Garcia
 
-# Find the source files of only the current source directory non-recursively
+# The source files
 aiki_src_files = \
-	$(shell find ${srcdir} -maxdepth 1 -name \*\.png)
+	ui-bg_flat_0_aaaaaa_40x100.png \
+	ui-bg_flat_75_ffffff_40x100.png \
+	ui-bg_glass_55_fbf9ee_1x400.png \
+	ui-bg_glass_65_ffffff_1x400.png \
+	ui-bg_glass_75_dadada_1x400.png \
+	ui-bg_glass_75_e6e6e6_1x400.png \
+	ui-bg_glass_95_fef1ec_1x400.png \
+	ui-bg_highlight-soft_75_cccccc_1x100.png \
+	ui-icons_222222_256x240.png \
+	ui-icons_2e83ff_256x240.png \
+	ui-icons_454545_256x240.png \
+	ui-icons_888888_256x240.png \
+	ui-icons_cd0a0a_256x240.png
 
-# Find the sub directories of only the current build directory non-recursively
-export aiki_sub_dirs = \
-	$(shell find -maxdepth 1 -type d | sed s/\.\\/*//)
+# Subdirectories to be built
+SUBDIRS =
 
-# Subdirectories to distribute and build
-DIST_SUBDIRS = $(aiki_sub_dirs)
-SUBDIRS = $(DIST_SUBDIRS)
+# Subdirectories to distribute
+DIST_SUBDIRS =
 
 # Additional files to distribute
 EXTRA_DIST = \
