--- a/src/assets/javascript/jquery/plugins/jstree/Makefile.am
+++ b/src/assets/javascript/jquery/plugins/jstree/Makefile.am
@@ -17,17 +17,24 @@
 
 # Written by Steven Garcia
 
-# Find the source files of only the current source directory non-recursively
+# The source files
 aiki_src_files = \
-	$(shell find ${srcdir} -maxdepth 1 -name \*\.css -o -name \*\.js -o -name \*\.xsl)
+	flat.xsl \
+	_lib.js \
+	nested.xsl \
+	sarissa_ieemu_xpath.js \
+	sarissa.js \
+	tree_component.css \
+	tree_component.js \
+	tree_component.min.js
 
-# Find the sub directories of only the current build directory non-recursively
-export aiki_sub_dirs = \
-	$(shell find -maxdepth 1 -type d | sed s/\.\\/*//)
+# Subdirectories to be built
+SUBDIRS = \
+	themes
 
-# Subdirectories to distribute and build
-DIST_SUBDIRS = $(aiki_sub_dirs)
-SUBDIRS = $(DIST_SUBDIRS)
+# Subdirectories to distribute
+DIST_SUBDIRS = \
+	themes
 
 # Additional files to distribute
 EXTRA_DIST = \
