--- a/src/assets/javascript/jquery/Makefile.am
+++ b/src/assets/javascript/jquery/Makefile.am
@@ -17,17 +17,21 @@
 
 # Written by Steven Garcia
 
-# Find the source files of only the current source directory non-recursively
+# The source files
 aiki_src_files = \
-	$(shell find ${srcdir} -maxdepth 1 -name \*\.js)
+	jquery-1.4.3.min.js \
+	jquery-1.4.2.min.js \
+	jquery-ui-1.7.2.custom.min.js
 
-# Find the sub directories of only the current build directory non-recursively
-export aiki_sub_dirs = \
-	$(shell find -maxdepth 1 -type d | sed s/\.\\/*//)
+# Subdirectories to be built
+SUBDIRS = \
+	css \
+	plugins
 
-# Subdirectories to distribute and build
-DIST_SUBDIRS = $(aiki_sub_dirs)
-SUBDIRS = $(DIST_SUBDIRS)
+# Subdirectories to distribute
+DIST_SUBDIRS = \
+	css \
+	plugins
 
 # Additional files to distribute
 EXTRA_DIST = \
