--- a/src/assets/javascript/jquery/css/smoothness/Makefile.am
+++ b/src/assets/javascript/jquery/css/smoothness/Makefile.am
@@ -17,17 +17,17 @@
 
 # Written by Steven Garcia
 
-# Find the source files of only the current source directory non-recursively
+# The source files
 aiki_src_files = \
-	$(shell find ${srcdir} -maxdepth 1 -name \*\.css)
+	jquery-ui-1.7.1.custom.css
 
-# Find the sub directories of only the current build directory non-recursively
-export aiki_sub_dirs = \
-	$(shell find -maxdepth 1 -type d | sed s/\.\\/*//)
+# Subdirectories to be built
+SUBDIRS = \
+	images
 
-# Subdirectories to distribute and build
-DIST_SUBDIRS = $(aiki_sub_dirs)
-SUBDIRS = $(DIST_SUBDIRS)
+# Subdirectories to distribute
+DIST_SUBDIRS = \
+	images
 
 # Additional files to distribute
 EXTRA_DIST = \
