--- a/src/assets/javascript/jquery/plugins/jstree/themes/default/Makefile.am
+++ b/src/assets/javascript/jquery/plugins/jstree/themes/default/Makefile.am
@@ -17,17 +17,29 @@
 
 # Written by Steven Garcia
 
-# Find the source files of only the current source directory non-recursively
+# The source files
 aiki_src_files = \
-	$(shell find ${srcdir} -maxdepth 1 -name \*\.css -o -name \*\.png -o -name \*\.gif)
+	context.gif \
+	create.png \
+	dot.gif \
+	fminus.gif \
+	fminus_rtl.gif \
+	fplus.gif \
+	fplus_rtl.gif \
+	f.png \
+	lastli.gif \
+	lastli_rtl.gif \
+	li.gif \
+	remove.png \
+	rename.png \
+	style.css \
+	throbber.gif
 
-# Find the sub directories of only the current build directory non-recursively
-export aiki_sub_dirs = \
-	$(shell find -maxdepth 1 -type d | sed s/\.\\/*//)
+# Subdirectories to be built
+SUBDIRS =
 
-# Subdirectories to distribute and build
-DIST_SUBDIRS = $(aiki_sub_dirs)
-SUBDIRS = $(DIST_SUBDIRS)
+# Subdirectories to distribute
+DIST_SUBDIRS =
 
 # Additional files to distribute
 EXTRA_DIST = \
