--- a/src/assets/javascript/plupload/img/Makefile.am
+++ b/src/assets/javascript/plupload/img/Makefile.am
@@ -17,17 +17,22 @@
 
 # Written by Steven Garcia
 
-# Find the source files of only the current source directory non-recursively
+# The source files
 aiki_src_files = \
-	$(shell find ${srcdir} -maxdepth 1 -name \*\.png -o -name \*\.gif)
+	backgrounds.gif \
+	buttons-disabled.png \
+	buttons.png \
+	delete.gif \
+	done.gif \
+	error.gif \
+	throbber.gif \
+	transp50.png
 
-# Find the sub directories of only the current build directory non-recursively
-export aiki_sub_dirs = \
-	$(shell find -maxdepth 1 -type d | sed s/\.\\/*//)
+# Subdirectories to be built
+SUBDIRS =
 
-# Subdirectories to distribute and build
-DIST_SUBDIRS = $(aiki_sub_dirs)
-SUBDIRS = $(DIST_SUBDIRS)
+# Subdirectories to distribute
+DIST_SUBDIRS =
 
 # Additional files to distribute
 EXTRA_DIST = \
