--- a/src/assets/extensions/Makefile.am
+++ b/src/assets/extensions/Makefile.am
@@ -22,10 +22,10 @@ aiki_src_files = \
 	readme
 
 # Subdirectories to be built
-SUBDIRS =
+SUBDIRS = aiki
 
 # Subdirectories to distribute
-DIST_SUBDIRS =
+DIST_SUBDIRS = aiki
 
 # Additional files to distribute
 EXTRA_DIST = \
