made AIKI_SITE_URL configure time option as well, because right now assumes all paths will have DOMAIN/PACKAGE while i'm using aiki.localhost for my local setup

--- a/configure.ac
+++ b/configure.ac
@@ -332,6 +332,12 @@ if $TEST -z $AIKI_LOGIN_URL; then AC_SUBST(AIKI_LOGIN_URL,[http://$DOMAIN/$PACKA
 fi
 VAR_LIST_ADD AIKI_LOGIN_URL $AIKI_LOGIN_URL
 
+AC_ARG_VAR(AIKI_SITE_URL,[Set the site URL [default: AIKI_SITE_URL=http://$DOMAIN/$PACKAGE/]])
+if $TEST -z $AIKI_SITE_URL; then AC_SUBST(AIKI_SITE_URL,[http://$DOMAIN/$PACKAGE/])
+fi
+VAR_LIST_ADD AIKI_SITE_URL $AIKI_SITE_URL
+
+
 # use eval to force variable substitution/expansion
 PKG_DATA_DIR=$($EVAL $EVAL $EVAL $ECHO $datadir/$PACKAGE)
 AC_SUBST(PKG_DATA_DIR,$PKG_DATA_DIR)
@@ -339,10 +345,6 @@ VAR_LIST_ADD PKG_DATA_DIR $PKG_DATA_DIR
 
 PKG_DATA_DIR_LEN=$($ECHO $PKG_DATA_DIR | $AWK '{print length}')
 AC_SUBST(PKG_DATA_DIR_LEN,$PKG_DATA_DIR_LEN)
-
-AIKI_SITE_URL=$($ECHO "http://$DOMAIN/$PACKAGE/")
-AC_SUBST(AIKI_SITE_URL,$AIKI_SITE_URL)
-VAR_LIST_ADD AIKI_SITE_URL $AIKI_SITE_URL
 
 AIKI_SITE_URL_LEN=$($ECHO "$AIKI_SITE_URL" | $AWK '{print length}')
 AC_SUBST(AIKI_SITE_URL_LEN,$AIKI_SITE_URL_LEN)
